Navbar and overlay formatting and sorting out css bleed bug

--- a/src/Navbar/Navbar.module.css
+++ b/src/Navbar/Navbar.module.css
@@ -1,21 +1,22 @@
-NavbarButton {
+.navbar {
+  width: 100%;
+  position: fixed;
+  margin-top: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 2;
+  background-color: whitesmoke;
+}
+
+.navbarButton {
   margin: 10px;
   padding: 10px;
+  width: 75px;
+  height: 75px;
   background-color: #007BFF;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 75px;
   cursor: 'pointer'
-}
-
-Overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  justify-content: center;
-  align-items: center
 }
